trunk/Archive2/a8/53ac36143e38cd/main.cpp
'std::basic_ostream<char,std::char_traits<char>> &std::operator <<<char,std::char_traits<char>>(std::basic_ostream<char,std::char_traits<char>> &,const char *)'
while trying to match the argument list '(std::basic_ostream<char,std::char_traits<char>>, std::string)'